--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,9 @@ actix-web-actors = "4.2.0"
 awc = "3.2.0"
 enigo = "0.1.3"
 futures-util = { version = "0.3.28", features = ["std", "sink"] }
+inputbot = { git = "https://github.com/obv-mikhail/InputBot", branch = "develop"}
 rand = "0.8.5"
+rdev = "0.5.3"
 serde = { version = "1.0.188", features = ["derive"] }
 serde_json = "1.0.105"
 tokio = { version = "1.32.0", features = ["full"] }
