--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,10 @@ path = "./src/client/main.rs"
 name = "client"
 
 [[bin]]
+path = "./src/client_fly/main.rs"
+name = "client_fly"
+
+[[bin]]
 path = "./src/server/main.rs"
 name = "server"
 
@@ -24,5 +28,5 @@ rand = "0.8.5"
 rdev = "0.5.3"
 serde = { version = "1.0.188", features = ["derive"] }
 serde_json = "1.0.105"
-tokio = { version = "1.32.0", features = ["full"] }
+tokio = { version = "1.32.0", features = ["full", "rt"] }
 toml = "0.7.6"
