--- a/instructions.toml
+++ b/instructions.toml
@@ -6,49 +6,259 @@ repeat_right_click = false
 
 [[instruction]]
 name = "Plow Terrain"
-change_hand_slot_to = "5"
-
+change_hand_slot_to = "2"
 path = [
-  { action = "walking", to = [0.5, 1.0, 0.5] },
-  { action = "right_clicking", to = [10.5, 1.0, 0.5] },
-  { action = "walking", to = [10.5, 1.0, 1.5] },
-  { action = "right_clicking", to = [0.5, 1.0, 1.5] },
-
-  # SKIP 2 BLOCKS TO NEXT POSTION
-  { action = "walking", to = [0.5, 1.0, 4.5] },
-
-  { action = "right_clicking", to = [10.5, 1.0, 4.5] },
-  { action = "walking", to = [10.5, 1.0, 5.5] },
-  { action = "right_clicking", to = [0.5, 1.0, 5.5] },
-
-  # SKIP 2 BLOCKS TO NEXT POSTION
-  { action = "walking", to = [0.5, 1.0, 8.5] },
-  { action = "right_clicking", to = [10.5, 1.0, 8.5] },
-  { action = "walking", to = [10.5, 1.0, 9.5] },
-  { action = "right_clicking", to = [0.5, 1.0, 9.5] },
+  { action = "walking",        to = [15306.5, 44.0, 15223.5] },
+  { action = "right_clicking", to = [15367.5, 44.0, 15223.5] },
+  { action = "walking",        to = [15367.5, 44.0, 15222.5] },
+  { action = "right_clicking", to = [15306.5, 44.0, 15222.5] },
+  { action = "walking",        to = [15306.5, 44.0, 15219.5] },
+  { action = "right_clicking", to = [15367.5, 44.0, 15219.5] },
+  { action = "walking",        to = [15367.5, 44.0, 15218.5] },
+  { action = "right_clicking", to = [15306.5, 44.0, 15218.5] },
+  { action = "walking",        to = [15306.5, 44.0, 15215.5] },
+  { action = "right_clicking", to = [15367.5, 44.0, 15215.5] },
+  { action = "walking",        to = [15367.5, 44.0, 15214.5] },
+  { action = "right_clicking", to = [15306.5, 44.0, 15214.5] },
+  { action = "walking",        to = [15306.5, 44.0, 15211.5] },
+  { action = "right_clicking", to = [15367.5, 44.0, 15211.5] },
+  { action = "walking",        to = [15367.5, 44.0, 15210.5] },
+  { action = "right_clicking", to = [15306.5, 44.0, 15210.5] },
+  { action = "walking",        to = [15306.5, 44.0, 15207.5] },
+  { action = "right_clicking", to = [15367.5, 44.0, 15207.5] },
+  { action = "walking",        to = [15367.5, 44.0, 15206.5] },
+  { action = "right_clicking", to = [15306.5, 44.0, 15206.5] },
+  { action = "walking",        to = [15306.5, 44.0, 15203.5] },
+  { action = "right_clicking", to = [15367.5, 44.0, 15203.5] },
+  { action = "walking",        to = [15367.5, 44.0, 15202.5] },
+  { action = "right_clicking", to = [15306.5, 44.0, 15202.5] },
+  { action = "walking",        to = [15306.5, 44.0, 15199.5] },
+  { action = "right_clicking", to = [15367.5, 44.0, 15199.5] },
+  { action = "walking",        to = [15367.5, 44.0, 15198.5] },
+  { action = "right_clicking", to = [15306.5, 44.0, 15198.5] },
+  { action = "walking",        to = [15306.5, 44.0, 15195.5] },
+  { action = "right_clicking", to = [15367.5, 44.0, 15195.5] },
+  { action = "walking",        to = [15367.5, 44.0, 15194.5] },
+  { action = "right_clicking", to = [15306.5, 44.0, 15194.5] },
+  { action = "walking",        to = [15306.5, 44.0, 15191.5] },
+  { action = "right_clicking", to = [15367.5, 44.0, 15191.5] },
+  { action = "walking",        to = [15367.5, 44.0, 15190.5] },
+  { action = "right_clicking", to = [15306.5, 44.0, 15190.5] },
+  { action = "walking",        to = [15306.5, 44.0, 15187.5] },
+  { action = "right_clicking", to = [15367.5, 44.0, 15187.5] },
+  { action = "walking",        to = [15367.5, 44.0, 15186.5] },
+  { action = "right_clicking", to = [15306.5, 44.0, 15186.5] },
+  { action = "walking",        to = [15306.5, 44.0, 15183.5] },
+  { action = "right_clicking", to = [15367.5, 44.0, 15183.5] },
+  { action = "walking",        to = [15367.5, 44.0, 15182.5] },
+  { action = "right_clicking", to = [15306.5, 44.0, 15182.5] },
+  { action = "walking",        to = [15306.5, 44.0, 15179.5] },
+  { action = "right_clicking", to = [15367.5, 44.0, 15179.5] },
+  { action = "walking",        to = [15367.5, 44.0, 15178.5] },
+  { action = "right_clicking", to = [15306.5, 44.0, 15178.5] },
+  { action = "walking",        to = [15306.5, 44.0, 15175.5] },
+  { action = "right_clicking", to = [15367.5, 44.0, 15175.5] },
+  { action = "walking",        to = [15367.5, 44.0, 15174.5] },
+  { action = "right_clicking", to = [15306.5, 44.0, 15174.5] },
+  { action = "walking",        to = [15306.5, 44.0, 15171.5] },
+  { action = "right_clicking", to = [15367.5, 44.0, 15171.5] },
+  { action = "walking",        to = [15367.5, 44.0, 15170.5] },
+  { action = "right_clicking", to = [15306.5, 44.0, 15170.5] },
+  { action = "walking",        to = [15306.5, 44.0, 15167.5] },
+  { action = "right_clicking", to = [15367.5, 44.0, 15167.5] },
+  { action = "walking",        to = [15367.5, 44.0, 15166.5] },
+  { action = "right_clicking", to = [15306.5, 44.0, 15166.5] },
+  { action = "walking",        to = [15306.5, 44.0, 15163.5] },
+  { action = "right_clicking", to = [15367.5, 44.0, 15163.5] },
+  { action = "walking",        to = [15367.5, 44.0, 15162.5] },
+  { action = "right_clicking", to = [15306.5, 44.0, 15162.5] },
 ]
-
 [[instruction]]
 name = "Plant Terrain"
-change_hand_slot_to = "9"
-reverse = true
-
+change_hand_slot_to = "1"
+reset_hand_stack =  true
 path = [
-  { action = "walking", to = [0.5, 1.0, 0.5] },
-  { action = "right_clicking", to = [10.5, 1.0, 0.5] },
-  { action = "walking", to = [10.5, 1.0, 1.5] },
-  { action = "right_clicking", to = [0.5, 1.0, 1.5] },
-
-  # # SKIP 2 BLOCKS TO NEXT POSTION
-  { action = "walking", to = [0.5, 1.0, 4.5] },
-
-  { action = "right_clicking", to = [10.5, 1.0, 4.5] },
-  { action = "walking", to = [10.5, 1.0, 5.5] },
-  { action = "right_clicking", to = [0.5, 1.0, 5.5] },
-
-  # SKIP 2 BLOCKS TO NEXT POSTION
-  { action = "walking", to = [0.5, 1.0, 8.5] },
-  { action = "right_clicking", to = [10.5, 1.0, 8.5] },
-  { action = "walking", to = [10.5, 1.0, 9.5] },
-  { action = "right_clicking", to = [0.5, 1.0, 9.5] },
+  { action = "walking",        to = [15306.5, 44.0, 15223.5] },
+  { action = "right_clicking", to = [15367.5, 44.0, 15223.5] },
+  { action = "walking",        to = [15367.5, 44.0, 15222.5] },
+  { action = "right_clicking", to = [15306.5, 44.0, 15222.5] },
+  { action = "walking",        to = [15306.5, 44.0, 15219.5] },
+  { action = "right_clicking", to = [15367.5, 44.0, 15219.5] },
+  { action = "walking",        to = [15367.5, 44.0, 15218.5] },
+  { action = "right_clicking", to = [15306.5, 44.0, 15218.5] },
+  { action = "walking",        to = [15306.5, 44.0, 15215.5] },
+  { action = "right_clicking", to = [15367.5, 44.0, 15215.5] },
+  { action = "walking",        to = [15367.5, 44.0, 15214.5] },
+  { action = "right_clicking", to = [15306.5, 44.0, 15214.5] },
+  { action = "walking",        to = [15306.5, 44.0, 15211.5] },
+  { action = "right_clicking", to = [15367.5, 44.0, 15211.5] },
+  { action = "walking",        to = [15367.5, 44.0, 15210.5] },
+  { action = "right_clicking", to = [15306.5, 44.0, 15210.5] },
+  { action = "walking",        to = [15306.5, 44.0, 15207.5] },
+  { action = "right_clicking", to = [15367.5, 44.0, 15207.5] },
+  { action = "walking",        to = [15367.5, 44.0, 15206.5] },
+  { action = "right_clicking", to = [15306.5, 44.0, 15206.5] },
+  { action = "walking",        to = [15306.5, 44.0, 15203.5] },
+  { action = "right_clicking", to = [15367.5, 44.0, 15203.5] },
+  { action = "walking",        to = [15367.5, 44.0, 15202.5] },
+  { action = "right_clicking", to = [15306.5, 44.0, 15202.5] },
+  { action = "walking",        to = [15306.5, 44.0, 15199.5] },
+  { action = "right_clicking", to = [15367.5, 44.0, 15199.5] },
+  { action = "walking",        to = [15367.5, 44.0, 15198.5] },
+  { action = "right_clicking", to = [15306.5, 44.0, 15198.5] },       
+  { action = "walking",        to = [15306.5, 44.0, 15195.5] },
+  { action = "right_clicking", to = [15367.5, 44.0, 15195.5] },
+  { action = "walking",        to = [15367.5, 44.0, 15194.5] },
+  { action = "right_clicking", to = [15306.5, 44.0, 15194.5] },
+  { action = "walking",        to = [15306.5, 44.0, 15191.5] },
+  { action = "right_clicking", to = [15367.5, 44.0, 15191.5] },
+  { action = "walking",        to = [15367.5, 44.0, 15190.5] },
+  { action = "right_clicking", to = [15306.5, 44.0, 15190.5] },
+  { action = "walking",        to = [15306.5, 44.0, 15187.5] },
+  { action = "right_clicking", to = [15367.5, 44.0, 15187.5] },
+  { action = "walking",        to = [15367.5, 44.0, 15186.5] },
+  { action = "right_clicking", to = [15306.5, 44.0, 15186.5] },
+  { action = "walking",        to = [15306.5, 44.0, 15183.5] },
+  { action = "right_clicking", to = [15367.5, 44.0, 15183.5] },
+  { action = "walking",        to = [15367.5, 44.0, 15182.5] },
+  { action = "right_clicking", to = [15306.5, 44.0, 15182.5] },
+  { action = "walking",        to = [15306.5, 44.0, 15179.5] },
+  { action = "right_clicking", to = [15367.5, 44.0, 15179.5] },
+  { action = "walking",        to = [15367.5, 44.0, 15178.5] },
+  { action = "right_clicking", to = [15306.5, 44.0, 15178.5] },
+  { action = "walking",        to = [15306.5, 44.0, 15175.5] },
+  { action = "right_clicking", to = [15367.5, 44.0, 15175.5] },
+  { action = "walking",        to = [15367.5, 44.0, 15174.5] },
+  { action = "right_clicking", to = [15306.5, 44.0, 15174.5] },
+  { action = "walking",        to = [15306.5, 44.0, 15171.5] },
+  { action = "right_clicking", to = [15367.5, 44.0, 15171.5] },
+  { action = "walking",        to = [15367.5, 44.0, 15170.5] },
+  { action = "right_clicking", to = [15306.5, 44.0, 15170.5] },
+  { action = "walking",        to = [15306.5, 44.0, 15167.5] },
+  { action = "right_clicking", to = [15367.5, 44.0, 15167.5] },
+  { action = "walking",        to = [15367.5, 44.0, 15166.5] },
+  { action = "right_clicking", to = [15306.5, 44.0, 15166.5] },
+  { action = "walking",        to = [15306.5, 44.0, 15163.5] },
+  { action = "right_clicking", to = [15367.5, 44.0, 15163.5] },
+  { action = "walking",        to = [15367.5, 44.0, 15162.5] },
+  { action = "right_clicking", to = [15306.5, 44.0, 15162.5] },
 ]
+
+# [default]
+# rotate_before_walk = true
+#   [[instruction]]
+# name = "Build"
+# reset_hand_stack =  false
+# path = [
+  # { action = "flying",         to = [15306.5, 42.2, 15223.5] },
+  # { action = "flying",         to = [15366.5, 42.2, 15223.5] },
+  # { action = "right_clicking", to = [15306.5, 42.2, 15223.5], looking = "back" },
+  # { action = "flying",         to = [15306.5, 42.2, 15222.5] },
+  # { action = "flying",         to = [15366.5, 42.2, 15222.5], allow_run = true },
+  # { action = "right_clicking", to = [15306.5, 42.2, 15222.5], looking = "back" },
+
+  # { action = "flying",         to = [15306.5, 42.2, 15219.5] },
+  # { action = "right_clicking", to = [15366.5, 42.2, 15219.5], looking = 0.0 },
+  # { action = "right_clicking", to = [15306.5, 42.2, 15219.5], looking = "back" },
+  # { action = "flying",         to = [15306.5, 42.2, 15218.5] },
+  # { action = "flying",         to = [15366.5, 42.2, 15218.5], allow_run = true },
+  # { action = "right_clicking", to = [15306.5, 42.2, 15218.5], looking = "back" },
+
+  # { action = "flying",         to = [15306.5, 42.2, 15215.5] },
+  # { action = "right_clicking", to = [15366.5, 42.2, 15215.5], looking = 0.0 },
+  # { action = "right_clicking", to = [15306.5, 42.2, 15215.5], looking = "back" },
+  # { action = "flying",         to = [15306.5, 42.2, 15214.5] },
+  # { action = "flying",         to = [15366.5, 42.2, 15214.5], allow_run = true },
+  # { action = "right_clicking", to = [15306.5, 42.2, 15214.5], looking = "back" },
+
+  # { action = "flying",         to = [15306.5, 42.2, 15211.5] },
+  # { action = "right_clicking", to = [15366.5, 42.2, 15211.5], looking = 0.0 },
+  # { action = "right_clicking", to = [15306.5, 42.2, 15211.5], looking = "back" },
+  # { action = "flying",         to = [15306.5, 42.2, 15210.5] },
+  # { action = "flying",         to = [15366.5, 42.2, 15210.5], allow_run = true },
+  # { action = "right_clicking", to = [15306.5, 42.2, 15210.5], looking = "back" },
+
+  # { action = "flying",         to = [15306.5, 42.2, 15207.5] },
+  # { action = "right_clicking", to = [15366.5, 42.2, 15207.5], looking = 0.0 },
+  # { action = "right_clicking", to = [15306.5, 42.2, 15207.5], looking = "back" },
+  # { action = "flying",         to = [15306.5, 42.2, 15206.5] },
+  # { action = "flying",         to = [15366.5, 42.2, 15206.5], allow_run = true },
+  # { action = "right_clicking", to = [15306.5, 42.2, 15206.5], looking = "back" },
+
+  # { action = "flying",         to = [15306.5, 42.2, 15203.5] },
+  # { action = "right_clicking", to = [15366.5, 42.2, 15203.5], looking = 0.0 },
+  # { action = "right_clicking", to = [15306.5, 42.2, 15203.5], looking = "back" },
+  # { action = "flying",         to = [15306.5, 42.2, 15202.5] },
+  # { action = "flying",         to = [15366.5, 42.2, 15202.5], allow_run = true },
+  # { action = "right_clicking", to = [15306.5, 42.2, 15202.5], looking = "back" },
+
+  # { action = "flying",         to = [15306.5, 42.2, 15199.5] },
+  # { action = "right_clicking", to = [15366.5, 42.2, 15199.5], looking = 0.0 },
+  # { action = "right_clicking", to = [15306.5, 42.2, 15199.5], looking = "back" },
+  # { action = "flying",         to = [15306.5, 42.2, 15198.5] },
+  # { action = "flying",         to = [15366.5, 42.2, 15198.5], allow_run = true },
+  # { action = "right_clicking", to = [15306.5, 42.2, 15198.5], looking = "back" },
+
+  # { action = "flying",         to = [15306.5, 42.2, 15195.5] },
+  # { action = "right_clicking", to = [15366.5, 42.2, 15195.5], looking = 0.0 },
+  # { action = "right_clicking", to = [15306.5, 42.2, 15195.5], looking = "back" },
+  # { action = "flying",         to = [15306.5, 42.2, 15194.5] },
+  # { action = "flying",         to = [15366.5, 42.2, 15194.5], allow_run = true },
+  # { action = "right_clicking", to = [15306.5, 42.2, 15194.5], looking = "back" },
+
+  # { action = "flying",         to = [15306.5, 42.2, 15191.5] },
+  # { action = "right_clicking", to = [15366.5, 42.2, 15191.5], looking = 0.0 },
+  # { action = "right_clicking", to = [15306.5, 42.2, 15191.5], looking = "back" },
+  # { action = "flying",         to = [15306.5, 42.2, 15190.5] },
+  # { action = "flying",         to = [15366.5, 42.2, 15190.5], allow_run = true },
+  # { action = "right_clicking", to = [15306.5, 42.2, 15190.5], looking = "back" },
+
+  # { action = "flying",         to = [15306.5, 42.2, 15187.5] },
+  # { action = "right_clicking", to = [15366.5, 42.2, 15187.5], looking = 0.0 },
+  # { action = "right_clicking", to = [15306.5, 42.2, 15187.5], looking = "back" },
+  # { action = "flying",         to = [15306.5, 42.2, 15186.5] },
+  # { action = "flying",         to = [15366.5, 42.2, 15186.5], allow_run = true },
+  # { action = "right_clicking", to = [15306.5, 42.2, 15186.5], looking = "back" },
+
+  # { action = "flying",         to = [15306.5, 42.2, 15183.5] },
+  # { action = "right_clicking", to = [15366.5, 42.2, 15183.5], looking = 0.0 },
+  # { action = "right_clicking", to = [15306.5, 42.2, 15183.5], looking = "back" },
+  # { action = "flying",         to = [15306.5, 42.2, 15182.5] },
+  # { action = "flying",         to = [15366.5, 42.2, 15182.5], allow_run = true },
+  # { action = "right_clicking", to = [15306.5, 42.2, 15182.5], looking = "back" },
+
+  # { action = "flying",         to = [15306.5, 42.2, 15179.5] },
+  # { action = "right_clicking", to = [15366.5, 42.2, 15179.5], looking = 0.0 },
+  # { action = "right_clicking", to = [15306.5, 42.2, 15179.5], looking = "back" },
+  # { action = "flying",         to = [15306.5, 42.2, 15178.5] },
+  # { action = "flying",         to = [15366.5, 42.2, 15178.5], allow_run = true },
+  # { action = "right_clicking", to = [15306.5, 42.2, 15178.5], looking = "back" },
+
+  # { action = "flying",         to = [15306.5, 42.2, 15175.5] },
+  # { action = "right_clicking", to = [15366.5, 42.2, 15175.5], looking = 0.0 },
+  # { action = "right_clicking", to = [15306.5, 42.2, 15175.5], looking = "back" },
+  # { action = "flying",         to = [15306.5, 42.2, 15174.5] },
+  # { action = "flying",         to = [15366.5, 42.2, 15174.5], allow_run = true },
+  # { action = "right_clicking", to = [15306.5, 42.2, 15174.5], looking = "back" },
+
+  # { action = "flying",         to = [15306.5, 42.2, 15171.5] },
+  # { action = "right_clicking", to = [15366.5, 42.2, 15171.5], looking = 0.0 },
+  # { action = "right_clicking", to = [15306.5, 42.2, 15171.5], looking = "back" },
+  # { action = "flying",         to = [15306.5, 42.2, 15170.5] },
+  # { action = "flying",         to = [15366.5, 42.2, 15170.5], allow_run = true },
+  # { action = "right_clicking", to = [15306.5, 42.2, 15170.5], looking = "back" },
+
+  # { action = "flying",         to = [15306.5, 42.2, 15167.5] },
+  # { action = "right_clicking", to = [15366.5, 42.2, 15167.5], looking = 0.0 },
+  # { action = "right_clicking", to = [15306.5, 42.2, 15167.5], looking = "back" },
+  # { action = "flying",         to = [15306.5, 42.2, 15166.5] },
+  # { action = "flying",         to = [15366.5, 42.2, 15166.5], allow_run = true },
+  # { action = "right_clicking", to = [15306.5, 42.2, 15166.5], looking = "back" },
+
+  # { action = "flying",         to = [15306.5, 42.2, 15163.5] },
+  # { action = "right_clicking", to = [15366.5, 42.2, 15163.5], looking = 0.0 },
+  # { action = "right_clicking", to = [15306.5, 42.2, 15163.5], looking = "back" },
+  # { action = "flying",         to = [15306.5, 42.2, 15162.5] },
+  # { action = "flying",         to = [15366.5, 42.2, 15162.5], allow_run = true },
+  # { action = "right_clicking", to = [15306.5, 42.2, 15162.5], looking = "back" },
+# ]
